[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "recwalk"
version = "0.1.0"
description = "Python port of the RecWalk recommendation algorithm"
license = {text = "MIT"}
authors = [ {name="OpenAI Assistant"} ]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
]

[project.optional-dependencies]
# add extras if needed
